Fixed jumpiness when deploying specific changesets. Don't live update deployment status if the log view isn't showing. Fixes #21.

--- a/Kudu.Web/Hubs/SourceControl/SourceControl.css
+++ b/Kudu.Web/Hubs/SourceControl/SourceControl.css
@@ -52,6 +52,10 @@
     width: 10%;
 }
 
+#scm #log th:nth-child(5) {
+    width: 10%;
+}
+
 #scm #log th:nth-child(6) {
     width: 20%;
 }
